[B][COLOR gold]v3.4.009[/COLOR][/B]
- Search queries tweaks

[B][COLOR gold]v3.4.007-8[/COLOR][/B]
- Cosmetic and other minor fixes

[B][COLOR gold]v3.4.006[/COLOR][/B]
- Added notification when trying to play trailer and API key's quota limit has been reached
- Cloudflare scraper updated from source

[B][COLOR gold]v3.4.005[/COLOR][/B]
- Added some more titles to the meta/scene mismatches function

[B][COLOR gold]v3.4.004[/COLOR][/B]
- Utilise kodi_six lib to handle py2/3 diffs on Kodi's python API
    modules cleaner
- Removed Feature: check movie/episode before importing to library
    It's just an insignificant reason to stress our providers when importing lists

[B][COLOR gold]v3.4.003[/COLOR][/B]
- Minor Kodi 19 fixes
- Cloudflare scraper updated from source

[B][COLOR gold]v3.4.002[/COLOR][/B]
- Quantity of items per page on paginated lists made customizable (defaults to 20)

[B][COLOR gold]v3.4.000-1[/COLOR][/B]
[I]!! YOU HAVE TO RE-AUTHORISE TRAKT AFTER UPDATING TO THIS RELEASE !![/I]
    (unless you use your own trakt client-id/client-secret.
    say thanks for this to kodibae and pressplay cloning TheOath along with it's API keys)
- Fixed Trakt episode indicators for Kodi 19
- Various other fixes

[B][COLOR gold]v3.3.93[/COLOR][/B]
- Re:sources filters tweaks

[B][COLOR gold]v3.3.92[/COLOR][/B]
- Fixed downloading to network shares

[B][COLOR gold]v3.3.9[/COLOR][/B]
- Kodi 19 fix

[B][COLOR gold]v3.3.7-8[/COLOR][/B]
- Re-arranged source fetching and filtering (internally) for more accuracy on source
    counting, and pre-emptive termination to take into account more filters (WiP)
- Personal Fanart.tv API key is now required to be entered in settings, in order to fetch
    extra and hq artwork
    That was done due to some add-ons (like fake-exodus from kodibae, and pressplay) cloning
    TheOath, along with the add-on's hard-coded API keys

[B][COLOR gold]v3.3.6[/COLOR][/B]
- Minor tweaks to previous commits

[B][COLOR gold]v3.3.5[/COLOR][/B]