@@ -123,7 +123,7 @@ settingsFile = os.path.join(dataPath, 'settings.xml')
 
 viewsFile = os.path.join(dataPath, 'views.db')
 
-bookmarksFile = os.path.join(dataPath, 'bookmarks.db')
+bookmarksFile = os.path.join(dataPath, 'bookmarks.1.db')
 
 providercacheFile = os.path.join(dataPath, 'providers.13.db')
 
